manifests/gitea/fleet1-lan-ingressroute.yaml
---
# Traefik IngressRoute: gitea.fleet1.lan
# TLS cert provided by fleet1-lan-wildcard-tls TLSStore (SNI-selected).
# TODO: add mTLS enforcement once device-mtls TLSOption + device-ca-public secret
# are mirrored into the gitea namespace (per frigate pattern).
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-fleet1-lan
  namespace: gitea
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - match: Host(`gitea.fleet1.lan`)
      kind: Rule
      services:
        - name: gitea-http
          port: 3000
